--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile project(':vitamio')
     compile project(':xutils')
     compile files('libs/glide-3.7.0.jar')
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.google.guava:guava:16.0'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
