--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.guava:guava:16.0'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile files('libs/gson-2.3.1.jar')
 }
