--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:name=".MyApplication"
@@ -88,6 +89,8 @@
                 <action android:name="com.fucang.mobileplayer_OPEN_AUDIO"/>
             </intent-filter>
         </service>
+
+        <activity android:name=".activity.SearchActivity"/>
     </application>
 
 </manifest>
