--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,10 @@ dependencies {
     compile files('libs/gson-2.3.1.jar')
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
 
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+    compile 'com.squareup.okio:okio:1.7.0'
+    compile 'com.shizhefei:LargeImageView:1.0.8'
+
     compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
 }
